--- a/webdesign/test5_responsive-toggle-menu/main.css
+++ b/webdesign/test5_responsive-toggle-menu/main.css
@@ -23,37 +23,6 @@ body{
     height: 100%
 }
 
-
-/* sidenote*/
-
-.sidenote {
-	display: block;
-	float: right;
-	width: 200px;
-	border: 1px solid #000;
-	margin: 2px;
-	padding: 3px;
-}
-
-
-/* sidenote2 for the Javascript */
-.sidenote2 {
-	float:none;
-	position: absolute;
-	right: 0;
-	width: 200px;
-	border: 1px solid #000;
-	margin: 0;
-	margin-right: -208px;
-}
-
-
-
-
-
-
-
-
 /* sidebar */
 
 #sidebar-wrapper {
@@ -162,6 +131,17 @@ body{
    padding-right: 65px;
    padding-top:10px;
 }
+
+#toggle, #toggle p, #menu550{
+    display: none;
+}
+
+
+
+
+
+
+/* content */
 .content-header {
   height: 65px;
   line-height: 65px;
@@ -174,37 +154,48 @@ body{
   display: inline-block;
 }
 
-@media (max-width:767px) {
-    #wrapper {
-    padding-left: 70px;
+#wrapper {
+    padding-left: 170px;
     transition: all .4s ease 0s;
 }
-#sidebar-wrapper {
-    left: 70px;
+
+
+@media (max-width:550px){
+body{
+    overflow-x:hidden;
+    color: red;
+    }
+    
+.row{
+    margin: 2%;
+    }
+    
+#sidebar-wrapper{
+    display: none;
+    }
+    
+#wrapper.active{
+    padding-left:0;
+    margin: 0;
+    }
+#menu550{
+    display: block; 
+    position: fixed;
+    background-color: white;
+    }
+#toggle{
+    height:auto;
+    background:#eee;
+    border:1px solid #900;
+    margin:1em;
+    text-align:center;
+    position: fixed;
 }
-#wrapper.active {
-    padding-left: 150px;
-}
-#wrapper.active #sidebar-wrapper {
-    left: 150px;
-    width: 150px;
-    transition: all .4s ease 0s;
+#toggle p{
+    text-align:center;
+    padding:0
 }
 }
 
 
-@media screen and (min-width: 900px), projection and (min-width: 900px), tv and (min-width: 900px) {
-#container{margin-left:10px}
-.sidenote {
-	float:none;
-	position: absolute;
-	right: 0;
-	width: 200px;
-	border: 1px solid #000;
-	margin: 0;
-	margin-right: -208px;
-}
-}
-@media screen and (min-width: 1070px), projection and (min-width: 1070px), tv and (min-width: 1070px) {
-#container{margin-left:auto}
-}
+
