--- a/webdesign/test5_responsive-toggle-menu/main.css
+++ b/webdesign/test5_responsive-toggle-menu/main.css
@@ -5,7 +5,8 @@
 
 body{
         font-family: "opensans";
-
+    margin: 0;
+    padding: 0;
 }
 
 .section{
@@ -20,10 +21,11 @@ body{
 #wrapper {
     padding-left: 70px;
     transition: all .4s ease 0s;
-    height: 100%
+    height: 100%;
+    position: relative;
 }
 
-/* sidebar */
+/* sidebar 
 
 #sidebar-wrapper {
     margin-left: -150px;
@@ -44,22 +46,7 @@ body{
     margin: 0;
     padding: 0;
 }
-#page-content-wrapper {
-    padding-left: 0;
-    margin-left: 0;
-    width: 100%;
-    height: auto;
-}
-#wrapper.active {
-    padding-left: 150px;
-}
-#wrapper.active #sidebar-wrapper {
-    left: 150px;
-}
 
-#page-content-wrapper {
-  width: 100%;
-}
 
 #sidebar_menu li a, .sidebar-nav li a {
     color: #999;
@@ -119,6 +106,26 @@ body{
   background: none;
 }
 
+*/
+
+
+#page-content-wrapper {
+    padding-left: 0;
+    margin-left: 0;
+    width: 100%;
+    height: auto;
+}
+#wrapper.active {
+    padding-left: 150px;
+}
+#wrapper.active #sidebar-wrapper {
+    left: 150px;
+}
+
+#page-content-wrapper {
+  width: 100%;
+}
+
 #main_icon
 {
     float:right;
@@ -132,13 +139,40 @@ body{
    padding-top:10px;
 }
 
-#toggle, #toggle p, #menu550{
-    display: none;
+#menu{
+    display: block; 
+    padding: 0;
+    margin: 0;
+    }
+#toggler{
+    margin: 0;
+    padding: 0;
+    color: white;
+    background-color: dimgray;
+    position: fixed;
+    height: 100%;
+    width: 20px;
+}
+#toggle{
+    height:auto;
+    background-color: dimgray;
+    border:1px solid #ff3300;
+    margin:0;
+    margin-top: -25px;
+    margin-left:22px;
+    padding: 0;
+    text-align:center;
+    position: fixed;
+    height: 100%;
+}
+#toggle p{
+    text-align:center;
+    padding:0
 }
 
-
-
-
+#menu550{
+    display: none;
+}
 
 
 /* content */
@@ -163,7 +197,6 @@ body{
 @media (max-width:550px){
 body{
     overflow-x:hidden;
-    color: red;
     }
     
 .row{
@@ -178,11 +211,13 @@ body{
     padding-left:0;
     margin: 0;
     }
+    
 #menu550{
     display: block; 
     position: fixed;
     background-color: white;
     }
+    
 #toggle{
     height:auto;
     background:#eee;
